trabalhando na extração de strings

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <input type="number" name="num" id="num">
 
         <div class="res">
-            <p>Resp aqui</p>
+            <div>
+                <p>Resp aqui</p>
+            </div>
         </div>
         <div class="botoes">
             <button type="reset"id="sub">Submit</button>
